--- a/Popcorn4/app/src/main/res/values/strings.xml
+++ b/Popcorn4/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="movie_tagline">Mankind was born on Earth. It was never meant to die here.</string>
     <string name="title">Title</string>
     <string name="popular_movies_title">Popular Movies</string>
+    <string name="no_result_found">No result Found.</string>
+    <string name="search">Search</string>
 </resources>
